syntax = "proto3";

package github.com.joserafaelSH.getting_out_brazil.go_auth_service;

option go_package = "./pb";

message SendUserToAuth {
    string email = 1;
    string password = 2;

}
message AuthResult {
    bool result = 1;
}

service AuthService {
    rpc AuthUser (SendUserToAuth) returns (AuthResult) {};

}
